--- a/index.css
+++ b/index.css
@@ -35,6 +35,11 @@ h3 {
 	margin-top: 20px;
 }
 
+iframe {
+	height: 28.125vw;
+}
+
+iframe,
 img,
 video {
 	margin: 5vh 5vw;
@@ -43,6 +48,7 @@ video {
 
 nav {
 	display: flex;
+	flex-wrap: wrap;
 }
 
 li,
