--- a/index.css
+++ b/index.css
@@ -5,7 +5,6 @@
 
 body {
 	margin: 0;
-	overflow-x: hidden;
 }
 
 em {
@@ -46,11 +45,11 @@ video {
 	width: 50vw;
 }
 
-nav {
-	display: flex;
-	flex-wrap: wrap;
+input {
+	color: black;
 }
 
+label,
 li,
 p {
 	font-family: 'Gill Sans', 'Gill Sans MT', 'Myriad Pro',
@@ -59,52 +58,113 @@ p {
 	line-height: 30px;
 }
 
-.background {
-	background-image: url('./images/stars.png');
-	background-repeat: repeat;
-	width: 100vw;
-}
-
-.gradient-background {
-	background-image: radial-gradient(black 60%, #00000000);
-	min-height: 100vh;
-	padding: 5vh 10vw;
-	width: 100vw;
-}
-
 .indent {
 	padding-left: 40px;
 }
 
-.inner-nav {
-	justify-content: flex-end;
+.vertical-image {
+	width: 25vw;
 }
 
-.inner-nav a {
-	margin: 3vh 0;
-	padding: 0 2vw;
+#background {
+	background-image: url('./images/stars.png');
+	background-repeat: repeat;
+	height: 100vh;
+	width: 100vw;
 }
 
-.inner-nav a:not(:first-child) {
-	border-left: 2px solid white;
+#close p {
+	color: black;
 }
 
-.inner-nav p {
-	margin: 0;
+#gradient-background {
+	background-image: radial-gradient(black 60%, #00000000);
+	display: flex;
+	flex-direction: column;
+	height: 100vh;
+	padding: 15px 10vw 0;
+	width: 100vw;
 }
 
-.logo {
+#header {
+	display: flex;
+}
+
+#header-img {
 	height: 200px;
 	margin: 0;
 	width: 200px;
 }
 
-.right-nav {
+#main-content {
+	flex: 1;
+	overflow-y: scroll;
+	padding-bottom: 5vh;
+}
+
+#modal {
+	background-color: gray;
+	border-radius: 20;
+	display: none;
+	flex-direction: column;
+	height: 90vh;
+	justify-content: center;
+	opacity: 0.95;
+	padding: 10vh 10vw;
+	position: fixed;
+	left: 5vw;
+	top: 5vh;
+	width: 90vw;
+}
+
+#nav-bar {
+	display: flex;
 	flex: 1;
 	flex-direction: column;
 	justify-content: space-between;
 }
 
-.vertical-image {
-	width: 25vw;
+#nav-bar a {
+	margin: 1vh 0;
+	padding: 0 2vw;
+}
+
+#nav-bar a:not(:first-child) {
+	border-left: 2px solid white;
+}
+
+#nav-bar div {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: flex-end;
+	position: sticky;
+	position: -webkit-sticky;
+	top: 0;
+}
+
+#nav-bar p {
+	margin: 0;
+}
+
+@media only screen and (max-width: 700px) {
+	h1 {
+		font-size: 30px;
+	}
+
+	h2 {
+		font-size: 25px;
+	}
+
+	h3 {
+		font-size: 20px;
+	}
+
+	#header-img {
+		height: 100px;
+		width: 100px;
+	}
+
+	#nav-bar div {
+		margin-left: -100px;
+	}
 }
